# cinema_paris

./: .gitignore  Makefile  README.md  pyproject.toml
app/: main.py
app/api/: routes.py
app/core/: cinema_config.py  cinemas.yml  config.py
app/models/: models.py
app/services/: cinema_service.py
app/static/css/: main.css
app/templates/: base.html  index.html
tests/: test_cinema_service.py  test_main.py  test_models.py  test_routes.py
